# WasteClassificationPytorch

./: .gitignore  Dockerfile  README.md  confusion_matrix.py  pyproject.toml  ruff.toml  test.py  train.py
base/: __init__.py  base_metric.py  base_model.py  base_trainer.py
configs/: test.yaml  train.yaml
configs/dataloaders/: waste_classification.yaml
configs/metrics/: waste_classification.yaml
configs/model/: waste_classification.yaml
configs/writer/: tensorboard.yaml
data_loader/: image_data_loader.py
logger/: __init__.py  logger.py  tensorboard.py
loss/: cross_entropy.py
metrics/: __init__.py  accuracy.py  f1.py  precision.py  recall.py
model/: model.py
trainer/: __init__.py  inferencer.py  trainer.py
utils/: __init__.py  metric_tracker.py  util.py
